axion-ui/manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: axion-ui-pod

spec:
  replicas: 1

  selector:
    matchLabels:
      app: axion-ui-pod

  template:
    metadata:
      labels:
        app: axion-ui-pod

    spec:
      containers:
        - name: axion-ui
          image: sammyacr.azurecr.io/axion-ui:v1

          imagePullPolicy: Always

          ports:
            - containerPort: 80
