axion-ui/manifest/service.yml
apiVersion: v1
kind: Service

metadata:
  name: axion-ui-service

spec:
  type: ClusterIP

  selector:
    app: axion-ui-pod

  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
